test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/static_non_const_array.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[1]: 
          TIdentifier: p
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arr
                  CCompoundInit: 
                    List[3]: 
                      CSingleInit: 
                        CVar: 
                          TIdentifier: p
                          None: 
                        None: 
                      CSingleInit: 
                        CBinary: 
                          CAdd: 
                          CVar: 
                            TIdentifier: p
                            None: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 0
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 3
                    Int: 
                  CStatic: 
            CS: 
              CReturn: 
                CSubscript: 
                  CVar: 
                    TIdentifier: arr
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: foo
                  List[1]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 5
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
